# hellopy-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build.yaml  test.yaml
docker/: Dockerfile  Dockerfile.dev
src/activity_gallery/: admin.py  apps.py  models.py  serializers.py  swagger.py  urls.py  views.py
src/activity_gallery/migrations/: 0001_initial.py  0002_alter_activityaction_options.py  0002_alter_activitytag_options.py  0003_activityaction_thumbnail.py  0004_alter_activityaction_thumbnail.py  0005_alter_activitytag_unique_together_and_more.py  0006_alter_activityaction_tags_delete_activitytag.py
src/community_action/: admin.py  apps.py  models.py  serializers.py  swagger.py  url.py  views.py
src/community_action/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/core/: errors.py  paginations.py  swagger.py
src/core/middlewares/: exception_handler.py
src/core/mixins/: models.py
src/core/responses/: base.py  serializer.py
src/core/tag/: models.py
src/faq/: admin.py  models.py  serializers.py  swagger.py  urls.py  views.py
src/faq/migrations/: 0001_initial.py  0002_delete_notice_remove_faq_question_type_and_more.py  0003_notice_alter_faq_id.py  0004_delete_notice_alter_faq_id.py  0005_alter_faq_is_deleted.py  0006_alter_faq_options.py  0007_alter_faq_options.py
src/faq/tests/: test_faq_model.py  test_faq_serializer.py  test_faq_view.py
src/manage_info/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/manage_info/migrations/: 0001_initial.py
src/manager/: admin.py  apps.py  models.py  swagger.py  urls.py  views.py
src/manager/migrations/: 0001_initial.py  0002_rename_managementinfo_manager.py  0003_alter_manager_options.py  0004_alter_manager_options.py
src/md/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/merchandise/: admin.py  apps.py  models.py  serializers.py  swagger.py  urls.py  views.py
src/merchandise/migrations/: 0001_initial.py  0002_alter_merchandise_image.py  0002_merchandise_delete_md.py  0003_alter_merchandise_image.py  0004_alter_merchandise_options.py  0005_alter_merchandise_options.py
src/notice/: admin.py  models.py  serializers.py  swagger.py  urls.py  views.py
src/notice/migrations/: 0001_initial.py  0002_alter_notice_options.py  0002_noticetag_noticetagrelation_notice_tag.py  0003_notice_tag.py  0004_alter_notice_options.py
src/notice/tests/: test_notice_model.py  test_notice_serializer.py  test_notice_view.py
src/public/: admin.py  models.py  serializers.py
src/public/migrations/: 0001_initial.py  0002_alter_tag_options.py  0003_alter_tag_options_alter_tag_name_activitytag.py  0004_alter_activitytag_options_noticetag.py  0005_tag_domain_alter_tag_unique_together.py  0006_alter_tag_options_alter_tag_name.py
src/pymon_calendar/: admin.py  apps.py  models.py  serializers.py  swagger.py  tests.py  urls.py  views.py
src/pymon_calendar/migrations/: 0001_initial.py  0002_alter_pymoncalendar_options.py  0003_alter_pymoncalendar_options.py
swagger/: api.json  api.yaml
