[project]
name = "hellopy-backend"
version = "0.1.0"
description = "hellopy-backend"

[tool.ruff]
target-version = "py312"
extend-exclude = [
   "**/*.yaml",
   "**/.gitignore",
   "**/.ruff_cache/*",
   "**/.mypy_cache.*",
   "**/__pycache__/*",
   "**/assets/*",
   "**/.vscode/*",
   "**/.git/*",
   "**/.idea/*",
   "**/temp/*",
   "**/*venv*/*",
]
line-length = 100
fix = true
indent-width = 4

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"